# GSVA

./: .Rhistory  .gitignore  CITATION.cff  DESCRIPTION  NAMESPACE  NEWS  README  README.md  aclocal.m4  cleanup  configure  configure.ac
.github/workflows/: check-bioc.yml
R/: AllClasses.R  AllGenerics.R  GSVA-package.R  GSVA-pkg-defunct.R  GSVA-pkg-deprecated.R  GsvaMethodParam.R  allClasses.R  allGenerics.R  ecdfvals.R  genesets.R  gsva-global.R  gsva.R  gsvaCallParam.R  gsvaDelayedArray.R  gsvaNewAPI.R  gsvaParam.R  methods-GsvaMethodParam.R  methods-ShinyApp.R  methods-gsvaParam.R  methods-plageParam.R  methods-shinyapp.R  methods-ssgseaParam.R  methods-zscoreParam.R  plage.R  plageParam.R  spatial.R  ssgsea.R  ssgseaParam.R  utils.R  zscore.R  zscoreParam.R  zzz.R
R/app/: ui.R
inst/: CITATION  README
inst/doc/: GSVA.Rnw  GSVA.bib
inst/extdata/: cache4vignette_avgnrr.RData  cache4vignette_gennrr.RData  cache4vignette_leukemia_canonicalPwy_es.RData  cache4vignette_leukemia_es.RData  cache4vignette_pac.RData
inst/shinyApp/: argumentsDataModule.R  closeModule.R  downloadModule.R  geneSetsModule.R  global.R  matrixModule.R  modalGSVAModule.R  mymatrix.txt  plot1_Module.R  plot2_Module.R  plot3_Module.R  server.R  ui.R
inst/shinyApp/rsconnect/shinyapps.io/prodriguez-bio2/: shinyApp.dcf
inst/shinyApp/server/: download_handler.R  gsva_generation.R  gsva_information.R  gsva_validation.R
inst/shinyApp/tests/shinytest/: genes.csv  matrix.csv  mytest1.R  test1.R
inst/shinyApp/ui/: argumentsDataInput.R  mainDataInput.R  selectDataInput.R
inst/shinyApp/www/: style.css
inst/unitTests/: test_delayed.R  test_delayedMethods.R  test_gsvaRanks.R  test_inputdatacontainers.R  test_newAPI.R  test_params.R  test_sparse.R  test_sparseMethods.R  test_ssgsea.R
man/: GSVA-pkg-defunct.Rd  GSVA-pkg-deprecated.Rd  GsvaExprData-class.Rd  GsvaGeneSets-class.Rd  GsvaMethodParam-class.Rd  computeGeneSetsOverlap.Rd  deduplicateGeneSets.Rd  emptyParam-class.Rd  filterGeneSets.Rd  geneIdsToGeneSetCollection.Rd  geneSets.Rd  gsva-defunct.Rd  gsva-deprecated.Rd  gsva.Rd  gsvaAnnotation.Rd  gsvaEnrichment.Rd  gsvaNewAPI.Rd  gsvaParam-class.Rd  gsvaParam.Rd  gsvaRanks.Rd  guessGeneIdType.Rd  igsva.Rd  plageParam-class.Rd  plageParam.Rd  readGMT.Rd  spatCor.Rd  ssgseaParam-class.Rd  ssgseaParam.Rd  zscoreParam-class.Rd  zscoreParam.Rd
src/: Makevars.in  Makevars.win  assess_density_test.c  ecdfvals.c  kcdfvals.c  kernel_estimation.c  ks_test.c  register_cmethods.c  rndWalk.c  utils.c
tests/: GSVA_vbt.R  GSVA_vbt.Rout.save  runTests.R  testNewAPI.R  test_gsva_newapi.R  test_gsva_newapi.Rout.save  test_plage_newapi.R  test_plage_newapi.Rout.save  test_ssgsea_newapi.R  test_ssgsea_newapi.Rout.save  test_zscore_newapi.R  test_zscore_newapi.Rout.save
vignettes/: GSVA.Rmd  GSVA.Rnw  GSVA.bib
